github_data_collector/src/data/issue_comment/ipython_ipynb.txt

addresses #45  starts to include the `importnb` machinery in the `ipynb` repo.

`importnb` has features that address a few open issues #38 #6 #44 

* In the short term should we include both `ipynb` and `importnb` in the namespace?
* Should we change `importnb` to `ipynb` or retain `importnb`?
[importnb](https://github.com/deathbeds/importnb) is a newer and better version of this package, that does the same things - but is more maintained.

I spoke to @tonyfast and there is interest in making this happen. It will help adoption, and keep this project moving forward.

Things to do:
- [ ] Import contents of that git repo to here, preserving all histories
- [ ] Add maintainers of importnb to this repo
- [ ] Add maintainers of importnb to pypi
- [ ] Make an announcement
How about 

```python
with ipynb.importer(full=True): # or defs=True
  import my_notebook
```

For example, it would allow to specify options like

```python
with ipynb.importer(ignore_errors=True):
  import my_notebook
```

Also, we may add the ability to write

```python
import ipynb.finder
import nb1
import nb2
```

I can make a PR if it's ok
In one notebook (en2ru.ipynb) I create function:
`def ruchar(): return 'Б'`
In another notebook I import first notebook and call ruchar()
```
from ipynb.fs.full.en2ru import *
ruchar()
```
and I get `'Р‘'`
It's really wierd that when the source notebook has the  magic cell funcction `%matplotlib inline` statement,
the `from ipynb.fs.defs.one_eda import guess_age` throws an error citing the same.
The license requires that all copies of the software include the license.  This makes sure the license is included in the wheels.  See the wheel documentation [here](https://wheel.readthedocs.io/en/stable/#including-the-license-in-the-generated-wheel-file) for more information.
Hi,

I found that under certain circumstances `__package__` is not defined and hence FSFinder has no package_prefix set. This leads to an error when trying to import a notebook.

Can it be that this is because `__package__` is expected to be the same as __spec__.parent beginning with Python 3.6?
https://docs.python.org/3/reference/import.html#__package__

Anyway, relying on `__package__` seems to be a risk.

Best,
Jens Henrik

---------------------
```
...python3.6/site-packages/ipynb-0.5.1-py3.6.egg/ipynb/fs/finder.py in find_spec(self=<ipynb.fs.finder.FSFinder object>, fullname='ipynb.fs.full.job_submit', path=['...site-packages/ipynb-0.5.1-py3.6.egg/ipynb/fs/full'], target=None)
     41         Claims modules that are under ipynb.fs
     42         """
---> 43         if fullname.startswith(self.package_prefix):
        fullname.startswith = <built-in method startswith of str object at 0x7f41805a6580>
        self.package_prefix = None
     44             for path in self._get_paths(fullname):
     45                 if os.path.exists(path):

TypeError: startswith first arg must be str or a tuple of str, not NoneType
```
I'm in JupyterLab, with two notebooks open, one of which is importing a function from the other (`tools.ipynb`):

```
import ipynb.fs.defs.tools
```

However, it doesn't seem to pick up changes from the other one, even when I re-run the cell containing the import. However, if I:

```
import importlib
importlib.reload(ipynb.fs.defs.tools)
```

Then it does indeed pick it up changes each time. Unfortunately, this doesn't work for the `from X import Y` style, since the reference to the module containing the imported item isn't in scope to pass to `reload`.

Is it possible that ipynb could watch timestamps on the imported files and handle this under the hood when the imported file changes? Thanks for a great project! 
Hi

I fail to load a book due to an image in a MD cell. 

I have a small notebook `mylib.ipynb`
[Cell 1 - Python]
```python
# <api>
var = 1
```

[Cell 2 - MD]
```markdown
![alt text](images/system-map.png "Title")

... the below also does not work...
<!-- <img src="images/system-map.png" width=1000  align="left"/> -->
```

And a notebook importing:
```python
import ipynb.fs.defs.mylib
```

When running this, I get 
```python
File "<unknown>", line 11
    ![alt text](images/system-map.png "Title")
    ^
SyntaxError: invalid syntax
```

This is OSX. Python 3.6.1

Packages: 
```
appdirs==1.4.3
appnope==0.1.0
attrs==16.3.0
Automat==0.5.0
awscli==1.11.87
bleach==2.0.0
botocore==1.5.50
cffi==1.9.1
click==6.7
colorama==0.3.7
constantly==15.1.0
cryptography==1.7.2
cssselect==1.0.1
cycler==0.10.0
decorator==4.0.11
docutils==0.13.1
entrypoints==0.2.2
et-xmlfile==1.0.1
excel-modelling-helper==0.3.0
Flask==0.12
Flask-SocketIO==2.8.4
google-api-python-client==1.6.2
html5lib==0.999999999
httplib2==0.10.3
idna==2.2
incremental==16.10.1
ipykernel==4.6.0
ipynb==0.4
ipython==5.3.0
ipython-genutils==0.2.0
ipywidgets==6.0.0
itsdangerous==0.24
jdcal==1.3
Jinja2==2.9.6
jmespath==0.9.2
jsonschema==2.6.0
jupyter==1.0.0
jupyter-client==5.0.1
jupyter-cms==0.7.0
jupyter-console==5.1.0
jupyter-core==4.3.0
lxml==3.7.2
MarkupSafe==1.0
matplotlib==2.0.0
mistune==0.7.4
mpmath==0.19
nbconvert==5.1.1
nbformat==4.3.0
networkx==1.11
nose==1.3.7
notebook==5.0.0
numpy==1.12.0
oauth2client==4.1.0
olefile==0.44
onedrivesdk==1.1.8
openpyxl==2.4.2
packaging==16.8
pandas==0.19.2
pandoc==1.0.0b2
pandocfilters==1.4.1
parsel==1.1.0
patsy==0.4.1
pbr==1.10.0
pexpect==4.2.1
pickleshare==0.7.4
Pillow==4.1.0
ply==3.10
prompt-toolkit==1.0.14
ptyprocess==0.5.1
pyasn1==0.2.3
pyasn1-modules==0.0.8
pycparser==2.17
PyDispatcher==2.0.5
pydot-ng==1.0.0
pydotplus==2.0.2
Pygments==2.2.0
pygraphviz==1.3.1
pyOpenSSL==16.2.0
pypandoc==1.3.3
pyparsing==2.2.0
PyQt5==5.7.1
pyspark==2.1.0+hadoop2.7
python-dateutil==2.6.0
python-engineio==1.2.3
python-socketio==1.7.1
pytz==2016.10
PyYAML==3.12
pyzmq==16.0.2
qtconsole==4.3.0
queuelib==1.4.2
requests==2.13.0
rsa==3.4.2
s3transfer==0.1.10
scipy==0.18.1
Scrapy==1.3.2
service-identity==16.0.0
simplegeneric==0.8.1
simplejson==3.10.0
sip==4.19
six==1.10.0
statsmodels==0.8.0
stevedore==1.20.0
sympy==1.0
tabulate==0.7.7
terminado==0.6
testpath==0.3
tornado==4.4.3
traitlets==4.3.2
Twisted==17.1.0
tzlocal==1.4
uritemplate==3.0.0
virtualenv==15.1.0
virtualenv-clone==0.2.6
virtualenvwrapper==4.7.2
w3lib==1.17.0
wcwidth==0.1.7
webencodings==0.5
Werkzeug==0.11.15
Whoosh==2.7.4
widgetsnbextension==2.0.0
xarray==0.8.2
xlrd==1.0.0
xlwt==1.2.0
zope.interface==4.3.3
```

Many thanks